Imported from https://madwarakshay@github.com/madwarakshay/documents.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/madwarakshay
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/madwarakshay
+	label-Verified = -1..+1 group user/madwarakshay
+	push = group user/madwarakshay
+	read = group user/madwarakshay
+	rebase = group user/madwarakshay
+	removeReviewer = group user/madwarakshay
+	submit = group user/madwarakshay
+[access "refs/heads/*"]
+	create = group user/madwarakshay
+	push = +force group user/madwarakshay
+	pushMerge = group user/madwarakshay
+	read = group user/madwarakshay
+[access "refs/tags/*"]
+	push = group user/madwarakshay
+	push = +force group user/madwarakshay
